Atualizar o style.css

--- a/styles/style.css
+++ b/styles/style.css
@@ -69,8 +69,7 @@ div.bolha{
   border-radius: 50%;
   width: 100px;
   height: 100px;
-  box-shadow: inset 0px 0px 20px black;
-  z-index: 2
+  box-shadow: inset 0px 0px 20px black
   
   
 }
